src/snapshots/learn_chumsky__test__recover_group-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
(testing}
---

None

--- Errors ---
[
    Report {
        label: Some(
            "expression",
        ),
        span: 8..9,
        reason: Unexpected,
        expected: [
            Some(
                Plus,
            ),
            Some(
                Minus,
            ),
            Some(
                Star,
            ),
            Some(
                Slash,
            ),
            Some(
                BangEq,
            ),
            Some(
                EqEq,
            ),
            Some(
                OpenParen,
            ),
            Some(
                CloseParen,
            ),
        ],
        found: Some(
            CloseBrace,
        ),
    },
]
---
