src/snapshots/learn_chumsky__test__recover_if-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if (1} then _
---

Some(
    (
        If {
            condition: (
                Error,
                0..11,
            ),
            then_branch: (
                Ident("_"),
                12..13,
            ),
            else_branch: None,
        },
        0..13,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 5..6,
        reason: Unexpected,
        found: CloseBrace,
        expected: [
            Plus,
            Minus,
            Star,
            Slash,
            BangEq,
            EqEq,
            OpenParen,
            CloseParen,
        ],
    },
]
---
