src/snapshots/learn_chumsky__test__recover_if-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if {1;) then _
---

Some(
    (
        If {
            condition: (
                Error,
                0..12,
            ),
            then_branch: (
                Ident("_"),
                13..14,
            ),
            else_branch: None,
        },
        0..14,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 6..7,
        reason: Unexpected,
        found: CloseParen,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Const,
            Continue,
            If,
            Loop,
            Mut,
            Return,
            OpenParen,
            OpenBrace,
            CloseBrace,
        ],
    },
]
---
