src/snapshots/learn_chumsky__test__recover_if-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if testing(1, {2, 3) then _
---

Some(
    (
        If {
            condition: (
                Call(
                    (
                        Ident("testing"),
                        3..10,
                    ),
                    [
                        (
                            Error,
                            10..20,
                        ),
                    ],
                ),
                3..20,
            ),
            then_branch: (
                Ident("_"),
                26..27,
            ),
            else_branch: None,
        },
        0..27,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 16..17,
        reason: Unexpected,
        found: Comma,
        expected: [
            Semi,
            Plus,
            Minus,
            Star,
            Slash,
            BangEq,
            EqEq,
            LessThan,
            GreaterThan,
            OpenParen,
        ],
    },
]
---
