src/snapshots/learn_chumsky__test__recover_if.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
if testing(,) then _
---

Some(
    (
        If {
            condition: (
                Call(
                    (
                        Ident("testing"),
                        3..10,
                    ),
                    [
                        (
                            Error,
                            10..13,
                        ),
                    ],
                ),
                3..13,
            ),
            then_branch: (
                Ident("_"),
                19..20,
            ),
            else_branch: None,
        },
        0..20,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 11..12,
        reason: Unexpected,
        found: Comma,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Continue,
            If,
            Loop,
            Return,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
]
---
