src/snapshots/learn_chumsky__test__simple_expressions-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "(grouped_ident)"

Ok(
    (
        Ident("grouped_ident"),
        1..14,
    ),
)
