src/snapshots/learn_chumsky__test__simple_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "func_name(2, "Do stuff!!", true)"

Ok((Call((Ident("func_name"), 0..9), [(Int(2), 10..11), (String("Do stuff!!"), 13..25), (Ident("true"), 27..31)]), 0..32))
