src/snapshots/learn_chumsky__test__simple_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
(make_func())()()()
---

Ok(
    (
        Call(
            (
                Call(
                    (
                        Call(
                            (
                                Call(
                                    (
                                        Ident("make_func"),
                                        1..10,
                                    ),
                                    [],
                                ),
                                1..12,
                            ),
                            [],
                        ),
                        1..15,
                    ),
                    [],
                ),
                1..17,
            ),
            [],
        ),
        1..19,
    ),
)
