src/snapshots/learn_chumsky__test__simple_expressions-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
(((wrapped)))()
---

Ok(
    (
        Call(
            (
                Ident("wrapped"),
                3..10,
            ),
            [],
        ),
        3..15,
    ),
)
